[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indexmap = "2.1.0"
itertools = "0.12.0"
num = "0.4.1"
winnow = "0.5.28"
